<resources>
    <string name="app_name">MyFtinessApp</string>
    <string name="squats">Squats</string>
    <string name="pushUpss">Push Ups</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="help">Help</string>
    <string name="series">Series</string>
    <string name="timer">Timer</string>
    <string name="back">Back</string>
    <string name="startstop">Start</string>
    <string name="reset">Reset</string>

</resources>