<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#2274A5">

    <Button
        android:id="@+id/buttonPushUp"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/pushUpss"
        android:layout_margin="30dp"
        android:background="@drawable/circle"
        android:textColor="#632B30"
        android:textSize="23sp"
        app:backgroundTint="#E6AF2E"
        app:layout_constraintBottom_toTopOf="@+id/buttonSquat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSquat"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/squats"
        android:layout_margin="30dp"
        android:background="@drawable/circle"
        android:textColor="#632B30"
        android:textSize="23sp"
        app:backgroundTint="#E6AF2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_margin="30dp"
        android:background="@drawable/circle"
        android:textColor="#632B30"
        android:textSize="23sp"
        app:backgroundTint="#E6AF2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSquat" />
</androidx.constraintlayout.widget.ConstraintLayout>