<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2274A5">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/timeText"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="00:000"
                android:textColor="#FADF63"
                android:textSize="100sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addTimeTButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/plus"
                android:textColor="#632B30"
                android:textSize="23sp"
                app:backgroundTint="#E6AF2E" />

            <Button
                android:id="@+id/removeTimeTButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/minus"
                android:textColor="#632B30"
                android:textSize="23sp"
                app:backgroundTint="#E6AF2E" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textRepeats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="0"
                android:textColor="#FADF63"
                android:textSize="190sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/startStopButtonT"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/startstop"
                android:textColor="#632B30"
                android:textSize="23sp"
                app:backgroundTint="#E6AF2E" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/backButtonT"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/back"
                android:textColor="#632B30"
                android:textSize="23sp"
                app:backgroundTint="#E6AF2E" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>