<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2274A5">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/exerciseText"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="4"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="Reapeats in series: 0"
                android:textColor="#632B30"
                android:textSize="18sp" />

            <Button
                android:id="@+id/addRepeatButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/plus"
                android:textColor="#632B30"
                android:textSize="22sp"
                app:backgroundTint="#E6AF2E" />

            <Button
                android:id="@+id/removeRepeatButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/minus"
                android:textColor="#632B30"
                android:textSize="22sp"
                app:backgroundTint="#E6AF2E" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/timerText"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="4"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="Rest time: 0s"
                android:textColor="#632B30"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addTimeButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/plus"
                android:textColor="#632B30"
                android:textSize="22sp"
                app:backgroundTint="#E6AF2E" />

            <Button
                android:id="@+id/removeTimeButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/minus"
                android:textColor="#632B30"
                android:textSize="22sp"
                app:backgroundTint="#E6AF2E" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/seriesText"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="4"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="Series: 0"
                android:textColor="#632B30"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addSeriesButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/plus"
                android:textColor="#632B30"
                android:textSize="22sp"
                app:backgroundTint="#E6AF2E" />

            <Button
                android:id="@+id/removeSeriesButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/minus"
                android:textColor="#632B30"
                android:textSize="22sp"
                app:backgroundTint="#E6AF2E" />
        </TableRow>

    </TableLayout>


    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.65999997">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textSpace2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="" />

            <TextView
                android:id="@+id/infoText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="Now Squats!"
                android:textColor="#FADF63"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textSpace3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textSpace1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="" />

            <TextView
                android:id="@+id/timeRepeatsText"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="0"
                android:textColor="#FADF63"
                android:textSize="220sp" />

            <TextView
                android:id="@+id/textSpace4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/startStopButtonS"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/startstop"
                android:textColor="#632B30"
                android:textSize="22sp"
                app:backgroundTint="#E6AF2E" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/backButtonS"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/back"
                android:textColor="#632B30"
                android:textSize="22sp"
                app:backgroundTint="#E6AF2E" />

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>